# bitstask

./: Cargo.toml
comical/: Cargo.toml
comical/src/: bstr.rs  com.rs  error.rs  guid.rs  handle.rs  lib.rs  safearray.rs  variant.rs
src/: bits.rs  client.rs  main.rs  pipe.rs  protocol.rs  server.rs  task.rs  task_service.rs
