[package]
name = "bitstask"
version = "0.0.0"
authors = ["Adam Gashlin <agashlin@mozilla.com>"]

[patch.crates-io]
winapi = { path = "../winapi-rs" }

[dependencies]
comical = { path = "./comical" }
rand = "0.5"
wio = "0.2"
winapi = { version = "0.3.6", features = ["errhandlingapi",
                                          "fileapi",
                                          "minwindef",
                                          "namedpipeapi",
                                          "ntdef",
                                          "processthreadsapi",
                                          "sddl",
                                          "taskschd",
                                          "winbase",
                                          "winerror",
                                          "winnt"] }
