[package]
name = "comical"
version = "0.0.0"
authors = ["Adam Gashlin <agashlin@mozilla.com>"]

[dependencies]
winapi = { version = "0.3.6", features = ["combaseapi",
                                          "impl-default",
                                          "minwindef",
                                          "oaidl",
                                          "objbase",
                                          "oleauto",
                                          "rpcdce",
                                          "winerror",
                                          "wtypesbase"] }
wio = "0.2"
